--- a/package.json
+++ b/package.json
@@ -9,26 +9,29 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@vueuse/core": "^8.2.5",
-    "element-plus": "^2.1.8",
-    "vue": "^3.2.31",
-    "vue-router": "^4.0.14"
+    "@element-plus/icons-vue": "^2.0.4",
+    "@vueuse/core": "^8.6.0",
+    "element-plus": "^2.2.4",
+    "vue": "^3.2.37",
+    "vue-router": "^4.0.15"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.20.2",
-    "@types/node": "^17.0.23",
-    "@vitejs/plugin-vue": "^2.3.1",
-    "@vue/test-utils": "^2.0.0-rc.19",
-    "eslint": "^8.13.0",
+    "@antfu/eslint-config": "^0.20.7",
+    "@iconify-json/ep": "^1.1.5",
+    "@types/node": "^17.0.40",
+    "@vitejs/plugin-vue": "^2.3.3",
+    "@vue/test-utils": "^2.0.0",
+    "eslint": "^8.17.0",
     "jsdom": "^19.0.0",
-    "typescript": "^4.6.3",
-    "unplugin-auto-import": "^0.7.0",
-    "unplugin-vue-components": "^0.19.1",
-    "vite": "^2.9.1",
+    "typescript": "^4.7.3",
+    "unplugin-auto-import": "^0.7.2",
+    "unplugin-icons": "^0.14.3",
+    "unplugin-vue-components": "^0.19.6",
+    "vite": "^2.9.10",
     "vite-plugin-pages": "^0.22.0",
-    "vite-plugin-windicss": "^1.8.3",
-    "vitest": "^0.9.3",
-    "vue-tsc": "^0.34.2",
-    "windicss": "^3.5.1"
+    "vite-plugin-windicss": "^1.8.4",
+    "vitest": "^0.9.4",
+    "vue-tsc": "^0.34.17",
+    "windicss": "^3.5.4"
   }
 }
