--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@vueuse/core": "^8.6.0",
     "element-plus": "^2.2.4",
     "vue": "^3.2.37",
-    "vue-router": "^4.0.15"
+    "vue-i18n": "9",
+    "vue-router": "^4.0.15",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.20.7",
