--- a/package.json
+++ b/package.json
@@ -11,26 +11,33 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.4",
     "@vueuse/core": "^8.6.0",
-    "element-plus": "^2.2.4",
+    "element-plus": "^2.2.5",
+    "lodash": "^4.17.21",
     "vue": "^3.2.37",
-    "vue-i18n": "9",
-    "vue-router": "^4.0.15",
+    "vue-i18n": "^9.1.10",
+    "vue-router": "^4.0.16",
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.20.7",
     "@iconify-json/ep": "^1.1.5",
-    "@types/node": "^17.0.40",
+    "@iconify-json/iconoir": "^1.1.7",
+    "@iconify-json/octicon": "^1.1.11",
+    "@iconify-json/uil": "^1.1.1",
+    "@iconify/json": "^2.1.60",
+    "@types/node": "^17.0.42",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue/test-utils": "^2.0.0",
     "eslint": "^8.17.0",
     "jsdom": "^19.0.0",
     "typescript": "^4.7.3",
+    "unocss": "^0.38.2",
     "unplugin-auto-import": "^0.7.2",
     "unplugin-icons": "^0.14.3",
     "unplugin-vue-components": "^0.19.6",
-    "vite": "^2.9.10",
+    "vite": "^2.9.12",
     "vite-plugin-pages": "^0.22.0",
+    "vite-plugin-vue-setup-extend": "^0.4.0",
     "vite-plugin-windicss": "^1.8.4",
     "vitest": "^0.9.4",
     "vue-tsc": "^0.34.17",
