--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,11 @@
     "types": [
       "vite/client",
       "vite-plugin-pages/client",
-      "vitest/importMeta"
+      "vitest/importMeta",
+      "unplugin-icons/types/vue"
     ],
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
     }
   },
   "exclude": ["dist", "node_modules"]
