--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@element-plus/icons-vue": "^2.0.4",
     "@vueuse/core": "^8.7.4",
     "element-plus": "^2.2.6",
+    "js-beautify": "^1.14.4",
     "lodash": "^4.17.21",
     "monaco-editor": "^0.33.0",
     "vue": "^3.2.37",
@@ -26,6 +27,7 @@
     "@iconify-json/octicon": "^1.1.11",
     "@iconify-json/uil": "^1.1.1",
     "@iconify/json": "^2.1.63",
+    "@types/js-beautify": "^1.13.3",
     "@types/node": "^17.0.45",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue/test-utils": "^2.0.0",
