--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.4",
     "@vueuse/core": "^8.7.4",
+    "clipboard": "^2.0.11",
     "element-plus": "^2.2.6",
     "js-beautify": "^1.14.4",
     "lodash": "^4.17.21",
