--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "preview": "vite preview",
     "test": "vitest",
     "prepare": "husky install",
-    "prettier": "prettier --write .",
     "commit": "cz"
   },
   "dependencies": {
@@ -27,6 +26,8 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.20.7",
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
     "@iconify-json/ep": "^1.1.6",
     "@iconify-json/iconoir": "^1.1.8",
     "@iconify-json/octicon": "^1.1.13",
@@ -37,15 +38,13 @@
     "@types/node": "^17.0.45",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue/test-utils": "^2.0.2",
+    "commitizen": "^4.2.5",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.20.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
     "jsdom": "^19.0.0",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
     "typescript": "^4.7.4",
-    "unocss": "^0.38.2",
     "unplugin-auto-import": "^0.7.2",
     "unplugin-icons": "^0.14.7",
     "unplugin-vue-components": "^0.19.9",
@@ -56,5 +55,10 @@
     "vitest": "^0.9.4",
     "vue-tsc": "^0.34.17",
     "windicss": "^3.5.6"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
