--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@vueuse/core": "^8.9.4",
     "clipboard": "^2.0.11",
     "dom-to-image": "^2.6.0",
-    "element-plus": "^2.2.9",
+    "element-plus": "^2.2.10",
     "js-beautify": "^1.14.4",
     "lodash": "^4.17.21",
     "monaco-editor": "^0.33.0",
@@ -30,9 +30,9 @@
     "@commitlint/config-conventional": "^17.0.3",
     "@iconify-json/ep": "^1.1.6",
     "@iconify-json/iconoir": "^1.1.8",
-    "@iconify-json/octicon": "^1.1.13",
+    "@iconify-json/octicon": "^1.1.14",
     "@iconify-json/uil": "^1.1.2",
-    "@iconify/json": "^2.1.78",
+    "@iconify/json": "^2.1.82",
     "@types/dom-to-image": "^2.6.4",
     "@types/js-beautify": "^1.13.3",
     "@types/node": "^17.0.45",
@@ -60,5 +60,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx,vue}": "eslint --fix"
   }
 }
