--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "@vueuse/core": "^8.9.4",
     "clipboard": "^2.0.11",
     "dom-to-image": "^2.6.0",
-    "element-plus": "^2.2.10",
+    "element-plus": "2.2.9",
     "js-beautify": "^1.14.4",
     "lodash": "^4.17.21",
     "monaco-editor": "^0.33.0",
     "vue": "^3.2.37",
     "vue-i18n": "^9.1.10",
-    "vue-router": "^4.1.2",
+    "vue-router": "^4.1.3",
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
@@ -30,9 +30,9 @@
     "@commitlint/config-conventional": "^17.0.3",
     "@iconify-json/ep": "^1.1.6",
     "@iconify-json/iconoir": "^1.1.8",
-    "@iconify-json/octicon": "^1.1.14",
+    "@iconify-json/octicon": "^1.1.15",
     "@iconify-json/uil": "^1.1.2",
-    "@iconify/json": "^2.1.82",
+    "@iconify/json": "^2.1.85",
     "@types/dom-to-image": "^2.6.4",
     "@types/js-beautify": "^1.13.3",
     "@types/node": "^17.0.45",
@@ -46,7 +46,7 @@
     "lint-staged": "^13.0.3",
     "typescript": "^4.7.4",
     "unplugin-auto-import": "^0.7.2",
-    "unplugin-icons": "^0.14.7",
+    "unplugin-icons": "^0.14.8",
     "unplugin-vue-components": "^0.19.9",
     "vite": "^2.9.14",
     "vite-plugin-pages": "^0.22.0",
