--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -26,12 +26,12 @@
     "@iconify-json/uil": "^1.1.2",
     "@iconify/json": "^2.1.86",
     "@types/js-beautify": "^1.13.3",
-    "@vitejs/plugin-vue": "^2.3.3",
+    "@vitejs/plugin-vue": "3.0.3",
     "jsdom": "^19.0.0",
-    "unplugin-auto-import": "^0.7.2",
+    "unplugin-auto-import": "0.11.1",
     "unplugin-icons": "^0.14.8",
     "unplugin-vue-components": "^0.19.9",
-    "vite": "^2.9.14",
+    "vite": "3.0.7",
     "vite-plugin-pages": "^0.22.0",
     "vite-plugin-vue-setup-extend": "^0.4.0",
     "vite-plugin-windicss": "^1.8.7",
