--- a/packages/element-plus/package.json
+++ b/packages/element-plus/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@corgi-icode/libs",
+  "name": "@corgi-icode/element-plus",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
