--- a/packages/element-plus/package.json
+++ b/packages/element-plus/package.json
@@ -2,10 +2,19 @@
   "name": "@corgi-icode/element-plus",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build"
   },
+  "main": "dist/corgi-element-plus.umd.js",
+  "module": "dist/corgi-element-plus.es.js",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "element-plus": "2.2.9"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "3.0.3",
+    "vite": "3.0.7"
+  }
 }
