--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,12 +4,7 @@
   "scripts": {
     "build": "vite build",
     "dev": "vite --port 8080 --open",
-    "lint": "eslint . --fix",
-    "typecheck": "vue-tsc --noEmit",
-    "preview": "vite preview",
-    "test": "vitest",
-    "prepare": "husky install",
-    "commit": "cz"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.6",
@@ -20,20 +15,11 @@
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
-    "@iconify-json/ep": "^1.1.6",
-    "@iconify-json/iconoir": "^1.1.8",
-    "@iconify-json/octicon": "^1.1.15",
-    "@iconify-json/uil": "^1.1.2",
-    "@iconify/json": "^2.1.86",
     "@types/js-beautify": "^1.13.3",
     "@vitejs/plugin-vue": "3.0.3",
     "jsdom": "^19.0.0",
     "unplugin-auto-import": "0.11.1",
-    "unplugin-icons": "^0.14.8",
     "unplugin-vue-components": "^0.19.9",
-    "vite": "3.0.7",
-    "vite-plugin-pages": "^0.22.0",
-    "vite-plugin-vue-setup-extend": "^0.4.0",
     "vite-plugin-windicss": "^1.8.7",
     "vitest": "^0.9.4",
     "vue-tsc": "^0.34.17",
