--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,7 +5,8 @@
   "main": "index.ts",
   "scripts": {},
   "dependencies": {
-    "@element-plus/icons-vue": "^2.0.6"
+    "@element-plus/icons-vue": "^2.0.6",
+    "vuedraggable": "^4.1.0"
   },
   "author": "",
   "license": "ISC"
