--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@corgi-icode/core",
-  "version": "1.0.0",
+  "version": "0.0.0-beta.1",
   "description": "",
   "main": "index.ts",
   "scripts": {},
@@ -8,6 +8,9 @@
     "@element-plus/icons-vue": "^2.0.6",
     "vuedraggable": "^4.1.0"
   },
-  "author": "",
+  "publishConfig": {
+    "access": "public"
+  },
+  "author": "xluoyu",
   "license": "ISC"
 }
