--- a/package.json
+++ b/package.json
@@ -21,17 +21,17 @@
     "@corgi-icode/element-plus": "workspace:*",
     "@vueuse/core": "^8.9.4",
     "lodash-es": "^4.17.21",
-    "vue": "^3.2.37"
+    "vue": "^3.2.38"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.20.7",
-    "@commitlint/cli": "^17.0.3",
-    "@commitlint/config-conventional": "^17.0.3",
-    "@iconify-json/ep": "^1.1.6",
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
+    "@iconify-json/ep": "^1.1.7",
     "@iconify-json/iconoir": "^1.1.8",
-    "@iconify-json/octicon": "^1.1.15",
+    "@iconify-json/octicon": "^1.1.17",
     "@iconify-json/uil": "^1.1.2",
-    "@iconify/json": "^2.1.86",
+    "@iconify/json": "^2.1.101",
     "@rollup/plugin-commonjs": "^22.0.2",
     "@types/node": "^17.0.45",
     "@vitejs/plugin-vue": "^3.0.3",
@@ -39,13 +39,14 @@
     "c8": "^7.12.0",
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.22.0",
+    "eslint": "^8.23.0",
     "husky": "^8.0.1",
     "jsdom": "^19.0.0",
     "lint-staged": "^13.0.3",
+    "rollup": "^2.79.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-external-globals": "^0.6.1",
-    "typescript": "^4.7.4",
+    "typescript": "^4.8.2",
     "unplugin-auto-import": "0.11.1",
     "unplugin-icons": "^0.14.8",
     "unplugin-vue-components": "^0.19.9",
