--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/js-beautify": "^1.13.3",
     "rollup-plugin-visualizer": "^5.7.1",
+    "unocss": "^0.45.22",
     "vite-plugin-windicss": "^1.8.7",
     "windicss": "^3.5.6"
   },
