--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   ],
   "scripts": {
     "dev": "npm run -C packages/ui dev",
-    "build": "npm run -C packages/ui build",
+    "build": "npm run build-ui",
+    "build-element": "npm run -C packages/element-plus build",
+    "build-ui": "npm run -C packages/ui build",
     "preview": "npm run -C packages/ui preview",
     "test": "vitest",
     "coverage": "vitest run --coverage",
@@ -51,6 +53,7 @@
     "unplugin-icons": "^0.14.9",
     "unplugin-vue-components": "^0.19.9",
     "vite": "3.0.7",
+    "vite-plugin-progress": "^0.0.5",
     "vite-plugin-vue-setup-extend": "^0.4.0",
     "vitest": "^0.9.4",
     "vue-tsc": "^0.34.17"
